--- a/menu.html
+++ b/menu.html
@@ -14,11 +14,11 @@
 	    <!-- mi css -->
 	    <link rel="stylesheet" href="css/prueba.css">
 
-		<title>SaleEsaBurguer - Hamburgueseria</title>
+		<title>SaleEsaBurguer - Menu</title>
 	</head>
 	<body>
 		<!-- 	inicia nav -->
-			<nav class="navbar navbar-expand-lg navbar-dark">
+			<nav class="navbar navbar-expand-lg navbar-dark col-lg-12 col-md-6 col-sm-4">
 			  <div class="container-fluid">
 			    <a class="navbar-brand" href="index.html">
 			    	<img src="imagenes/logo-edit.png" alt="" class="animate__animated animate__flip">
@@ -32,7 +32,7 @@
 			          <a class="nav-link" aria-current="page" href="menu.html">Menu</a>
 			        </li>
 			        <li class="nav-item animate__animated animate__flip animacionBotonera">
-			          <a class="nav-link" href="menuInfantil.html">Menu infantil</a>
+			          <a class="nav-link" href="combos.html">Combos</a>
 			        </li>
 			         <li class="nav-item animate__animated animate__flip animacionBotonera">
 			          <a class="nav-link" href="contacto.html">Contacto</a>
@@ -54,12 +54,12 @@
 			<section id="menu">
 					<div class="row">
 							<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-								<img src="imagenes/altoque.png" alt="">
+								<img src="imagenes/altoque.png" alt="imagen de nombre de la hamburguesa">
 						  </div>
 							
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
 							<figure>
-								<img src="imagenes/HamburguesaAltoqueroque.jpg" alt="">
+								<img src="imagenes/HamburguesaAltoqueroque.jpg" alt="imagen de hamburguesa altoqueroque">
 									<div class="capa">
 										<h3>ALGO</h3>
 										<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Unde numquam cupiditate, non ipsum!</p>
@@ -68,18 +68,18 @@
 						</div>
 
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-							<img src="imagenes/altoque1.png" alt="">
+							<img src="imagenes/altoque1.png" alt="imagen ilustrativa">
 						</div>
 					</div>
 
 						<div class="row">
 							<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-								<img src="imagenes/caricia.png" alt="">
+								<img src="imagenes/caricia.png" alt="imagen de hamburguesa caricia al paladar">
 							</div>
 
 							<div class="col-lg-4 col-md-6 col-sm-12 p-2">
 								<figure>
-									<img src="imagenes/cariciapaladar.png" alt="">
+									<img src="imagenes/cariciapaladar.png" alt="imagen capa">
 										<div class="capa">
 											<h3>SABIAS QUE</h3>
 											<p>PODES PEDIRLA SIMPLE,DOBLE Y HASTA TRIPLE</p>
@@ -88,18 +88,18 @@
 							</div>
 
 							<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-								<img src="imagenes/caricia1.png" alt="">
+								<img src="imagenes/caricia1.png" alt="imagen">
 							</div>
 						</div>
 
 					<div class="row">
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-							<img src="imagenes/vegguie.png" alt="">
+							<img src="imagenes/vegguie.png" alt="imaguen de hamburguesa veggie">
 						</div>
 
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
 							<figure>
-								<img src="imagenes/vegguieburguer.png" alt="">
+								<img src="imagenes/vegguieburguer.png" alt="imagen capa">
 									<div class="capa">
 										<h3>SABIAS QUE</h3>
 										<p>PODES PEDIRLA SIMPLE,DOBLE Y HASTA TRIPLE</p>
@@ -107,18 +107,18 @@
 							</figure>
 						</div>
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-							<img src="imagenes/vegguie1.png" alt="">
+							<img src="imagenes/vegguie1.png" alt="imagen">
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-							<img src="imagenes/noteanimas.png" alt="">
+							<img src="imagenes/noteanimas.png" alt="imagen hamburguesa no te animas">
 						</div>
 
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
 							<figure>
-								<img src="imagenes/noteanimasburguer.png" alt="">
+								<img src="imagenes/noteanimasburguer.png" alt="imagen capa">
 									<div class="capa">
 										<h3>SABIAS QUE</h3>
 										<p>PODES PEDIRLA SIMPLE,DOBLE Y HASTA TRIPLE</p>
@@ -127,18 +127,18 @@
 						</div>
 
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-							<img src="imagenes/note1.png" alt="">
+							<img src="imagenes/note1.png" alt="imagen">
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-							<img src="imagenes/estas.png" alt="">
+							<img src="imagenes/estas.png" alt="imagen hamburguesa estas">
 						</div>
 
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
 							<figure>
-								<img src="imagenes/nomelacontes.png" alt="">
+								<img src="imagenes/nomelacontes.png" alt="imagen capa">
 									<div class="capa">
 										<h3>SABIAS QUE</h3>
 										<p>PODES PEDIRLA SIMPLE,DOBLE Y HASTA TRIPLE</p>
@@ -147,18 +147,18 @@
 						</div>
 
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-							<img src="imagenes/estas1.png" alt="">
+							<img src="imagenes/estas1.png" alt="imagen">
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-							<img src="imagenes/chesse.png" alt="">
+							<img src="imagenes/chesse.png" alt="imagen hamburguesa chesse">
 						</div>
 
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
 							<figure>
-								<img src="imagenes/chesseburguer.png" alt="">
+								<img src="imagenes/chesseburguer.png" alt="imagen capa">
 									<div class="capa">
 										<h3>SABIAS QUE</h3>
 										<p>PODES PEDIRLA SIMPLE,DOBLE Y HASTA TRIPLE</p>
@@ -167,18 +167,18 @@
 						</div>
 
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-							<img src="imagenes/chesse1.png" alt="">
+							<img src="imagenes/chesse1.png" alt="imagen">
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-							<img src="imagenes/verdadera.png" alt="">
+							<img src="imagenes/verdadera.png" alt="imagen hamburguesa verdadera">
 						</div>
 
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
 							<figure>
-								<img src="imagenes/laverdadera.png" alt="">
+								<img src="imagenes/laverdadera.png" alt="imagen capa">
 									<div class="capa">
 										<h3>SABIAS QUE</h3>
 										<p>PODES PEDIRLA SIMPLE,DOBLE Y HASTA TRIPLE</p>
@@ -187,7 +187,7 @@
 						</div>
 
 						<div class="col-lg-4 col-md-6 col-sm-12 p-2">
-							<img src="imagenes/verdadera1.png" alt="">
+							<img src="imagenes/verdadera1.png" alt="imagen">
 						</div>
 					</div>
 					
@@ -198,7 +198,7 @@
 			<section>
 					<div>
 						<article class="caja2">
-								<h1><p>Sabias que podes convertir cualquiera de nuestras hambuerguezas en veggies? consulta y sorprendete con nuestra amplia variedad!</p></h1>
+								<h2><p>Sabias que podes convertir cualquiera de nuestras hambuerguezas en veggies? consulta y sorprendete con nuestra amplia variedad!</p></h2>
 						</article>
 					</div>
 			</section>
@@ -212,7 +212,7 @@
 					    <li class="breadcrumb-item escalas"><a href="index.html">Inicio</a>
 					    </li>
 
-					    <li class="breadcrumb-item escalas"><a href="menuInfantil.html">Menu infantil</a>
+					    <li class="breadcrumb-item escalas"><a href="combos.html">Combos</a>
 					    </li>
 
 					    <li class="breadcrumb-item escalas"><a href="Contacto.html">Contacto</a>
@@ -231,15 +231,14 @@
 			<footer class="caja3">
 			  <h6>Redes sociales</h6>
 			    <div>
-			      <a href="https://wa.me/NUMERO">
+			      <a href="https://wa.me/5491123880941">
 			        <img id="wpp" src="imagenes/logoWhats.png" alt="logo de whats app para realizar pedidos y/o consultas">
 			      </a>
 			    </div>
 			    <div id="insta">
-			      <img src="imagenes/logo-insta.jpg" alt="">
-			    </div>
-			    <div id="face">
-			      <img src="imagenes/logo-insta.jpg" alt="">
+			    	<a href="https://www.instagram.com/saleesaburger/?hl=es-la">
+			      <img src="imagenes/logoInsta2.png" alt="imagen logo instagram">
+			      </a>
 			    </div>
 			</footer>
 		<!-- cierra footer -->
