--- a/nosotros.html
+++ b/nosotros.html
@@ -15,14 +15,14 @@
     <!--   mi css -->
     <link rel="stylesheet" href="css/prueba.css">
 
-    <title>home</title>
+    <title>SaleEsaBurguer - Nosotros</title>
   </head>
   <body>
     <!--    inicia nav -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark col-lg-12 col-md-6 col-sm-4">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-          	<img src="imagenes/logo-edit.png" alt="" class="animate__animated animate__flip">
+          	<img src="imagenes/logo-edit.png" alt="logo de la marca" class="animate__animated animate__flip">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
                 <a class="nav-link" aria-current="page" href="menu.html">Menu</a>
               </li>
               <li class="nav-item animate__animated animate__flip animacionBotonera">
-                <a class="nav-link" href="menuInfantil.html">Menu infantil</a>
+                <a class="nav-link" href="combos.html">Combos</a>
               </li>
                <li class="nav-item animate__animated animate__flip animacionBotonera">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -64,7 +64,7 @@
       		    <li class="breadcrumb-item escalas"><a href="menu.html">Menu</a>
       		    </li>
 
-      		    <li class="breadcrumb-item escalas"><a href="menuInfantil.html">Menu infantil</a>
+      		    <li class="breadcrumb-item escalas"><a href="combos.html">Combos</a>
       		    </li>
 
       		    <li class="breadcrumb-item escalas"><a href="contacto.html">Contacto</a></li>
@@ -80,7 +80,7 @@
 
       <header>
         <div class="caja2">
-          <h2>HOLA JU TODAVIA NO TENGO LAS COSAS DE ESTA SECCION :C ♥</h2>
+          <h2>Esta seccion no tiene contenido porque la pagina no se va a usar y solamente tenia que completar las 5 secciones,no se me ocurrio nada para poner :c</h2>
         </div>
       </header>
 
@@ -89,17 +89,15 @@
       <footer class="caja3">
         <h6>Redes sociales</h6>
           <div>
-            <a href="https://wa.me/NUMERO">
+            <a href="https://wa.me/5491123880941">
               <img id="wpp" src="imagenes/logoWhats.png" alt="logo de whats app para realizar pedidos y/o consultas">
             </a>
           </div>
-          <div id="insta">
-            <img src="imagenes/logo-insta.jpg" alt="">
+            <a href="https://www.instagram.com/saleesaburger/?hl=es-la">
+            <div id="insta">
+              <img src="imagenes/logoInsta2.png" alt="Logo instagram">
+            </a>
           </div>
-          <div id="face">
-            <img src="imagenes/logo-insta.jpg" alt="">
-          </div>
-      </footer>
     <!-- cierra footer -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
