--- a/combos.html
+++ b/combos.html
@@ -14,14 +14,14 @@
 
     <!--   mi css -->
     <link rel="stylesheet" href="css/prueba.css">
-    <title>SaleEsaBurguer - Hamburgueseria </title>
+    <title>SaleEsaBurguer - Combos </title>
   </head>
   <body>
     <!--    inicia nav -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark col-lg-12 col-md-6 col-sm-4">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="imagenes/logo-edit.png" alt="" class="animate__animated animate__flip">
+            <img src="imagenes/logo-edit.png" alt="logo de la marca" class="animate__animated animate__flip">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
                 <a class="nav-link" aria-current="page" href="menu.html">Menu</a>
               </li>
               <li class="nav-item animate__animated animate__flip animacionBotonera">
-                <a class="nav-link" href="menuInfantil.html">Menu infantil</a>
+                <a class="nav-link" href="menuInfantil.html">Combos</a>
               </li>
               <li class="nav-item animate__animated animate__flip animacionBotonera">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -64,10 +64,10 @@
             <img src="imagenes/heroe-editOptimizada.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/heroe-editOptimizada.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/carrousel.png" class="d-block w-100" alt="imagen de hamburguesa ilustrativa">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/heroe-editOptimizada.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/carrousel2.png" class="d-block w-100" alt="imagen de hamburguesa ilustrativa">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -100,7 +100,7 @@
 
     		    <li class="breadcrumb-item escalas"><a href="Nosotros.html">Nosotros</a></li>
 
-    		    <li class="breadcrumb-item active" aria-current="page">Menu infantil
+    		    <li class="breadcrumb-item active" aria-current="page">Combos
     		    </li>
 
     		  </ol>
@@ -110,26 +110,26 @@
     <!-- cierra bread -->
     <!--   inician cards de combos -->
 		<div class="row">
-			<article class="col-lg-4">
+			<article class="col-lg-4 ">
 				<div class="card">
-          <img src="imagenes/infantil4.jpg" class="card-img-top" alt="...">
+          <img src="imagenes/infantil4.jpg" class="card-img-top" alt="imagen de combo 1">
           <div class="card-body">
             <h5 class="card-title">Combo 1
               <span class="badge bg-danger">Nuevo!</span>
             </h5>
-            <p class="card-text">hola juli,todavia no se como vamos a armar los combos,es todo ilustrativo:(</p>
+            <p class="card-text">Dos latas de sprite+chocolate tofi+medallones de menta+chocolate block+cabsha</p>
             <a href="..." class="btn btn-primary">Pedir</a>
           </div>
       </article>
 
       <article class="col-lg-4">
         <div class="card">
-          <img src="imagenes/infantil1.jpg" class="card-img-top" alt="...">
+          <img src="imagenes/infantil1.jpg" class="card-img-top" alt="imagen de combo 2">
           <div class="card-body">
             <h5 class="card-title">Combo 2 
               <span class="badge bg-danger">Nuevo!</span>
             </h5>
-            <p class="card-text">hola juli,todavia no se como vamos a armar los combos,es todo ilustrativo:(</p>
+            <p class="card-text">juguetes con laser para los mas chiquitos!! Son a eleccion,podes seleccionarlos en tu pedido</p>
             <a href=".." class="btn btn-primary">Pedir</a>
           </div>
          </div>
@@ -137,12 +137,12 @@
 
       <article class="col-lg-4">  
         <div class="card">
-          <img src="imagenes/infantil3.jpg" class="card-img-top" alt="...">
+          <img src="imagenes/infantil3.jpg" class="card-img-top" alt="imagen de combo 3">
             <div class="card-body">
               <h5 class="card-title">Combo 3
                 <span class="badge bg-danger">Nuevo!</span>
               </h5>
-              <p class="card-text">hola juli,todavia no se como vamos a armar los combos,es todo ilustrativo:(.</p>
+              <p class="card-text">juguetes con desafios para los mas chiquitos!! Son a eleccion,podes seleccionarlos en tu pedido.</p>
               <a href="#" class="btn btn-primary">Pedir</a>
             </div>
         </div>
@@ -150,12 +150,12 @@
 
       <article class="col-lg-4">  
         <div class="card">
-          <img src="imagenes/infantil5.jpg" class="card-img-top" alt="...">
+          <img src="imagenes/infantil5.jpg" class="card-img-top" alt="imagen de combo 4">
             <div class="card-body">
-              <h5 class="card-title">Combo 3
+              <h5 class="card-title">Combo 4
                 <span class="badge bg-danger">Nuevo!</span>
               </h5>
-              <p class="card-text">hola juli,todavia no se como vamos a armar los combos,es todo ilustrativo:(</p>
+              <p class="card-text">Dos latas de coca+chocolate tofi+medallones de menta+chocolate block+cabsha</p>
               <a href="#" class="btn btn-primary">Pedir</a>
             </div>
         </div>
@@ -163,12 +163,12 @@
 
       <article class="col-lg-4">  
         <div class="card">
-          <img src="imagenes/infantil6.jpg" class="card-img-top" alt="...">
+          <img src="imagenes/infantil6.jpg" class="card-img-top" alt="imagen de combo 5">
             <div class="card-body">
-              <h5 class="card-title">Combo 3
+              <h5 class="card-title">Combo 5
                 <span class="badge bg-danger">Nuevo!</span>
               </h5>
-              <p class="card-text">hola juli,todavia no se como vamos a armar los combos,es todo ilustrativo:(.</p>
+              <p class="card-text">Dos latas de fanta+chocolate tofi+medallones de menta+chocolate block+cabsha</p>
               <a href="#" class="btn btn-primary">Pedir</a>
             </div>
         </div>
@@ -176,12 +176,12 @@
 
       <article class="col-lg-4">  
         <div class="card">
-          <img src="imagenes/infantil7.jpg" class="card-img-top" alt="...">
+          <img src="imagenes/infantil7.jpg" class="card-img-top" alt="imagen de combo 6">
             <div class="card-body">
-              <h5 class="card-title">Combo 3
+              <h5 class="card-title">Combo 6
                 <span class="badge bg-danger">Nuevo!</span>
               </h5>
-              <p class="card-text">hola juli,todavia no se como vamos a armar los combos,es todo ilustrativo:(</p>
+              <p class="card-text">Dos latas de swhepss+ dos chocolate tofi + dos medallones de menta+dos cabsha+dos corasones</p>
               <a href="#" class="btn btn-primary">Pedir</a>
             </div>
         </div>
@@ -196,15 +196,14 @@
     <footer class="caja3">
       <h6>Redes sociales</h6>
         <div>
-          <a href="https://wa.me/NUMERO">
+          <a href="https://wa.me/5491123880941">
             <img id="wpp" src="imagenes/logoWhats.png" alt="logo de whats app para realizar pedidos y/o consultas">
           </a>
         </div>
         <div id="insta">
-          <img src="imagenes/logo-insta.jpg" alt="">
-        </div>
-        <div id="face">
-          <img src="imagenes/logo-insta.jpg" alt="">
+          <a href="https://www.instagram.com/saleesaburger/?hl=es-la">
+          <img src="imagenes/logoInsta2.png" alt="logo de instragram para dirigirse a SaleEsaBurguer">
+          </a>
         </div>
     </footer>
 
