--- a/contacto.html
+++ b/contacto.html
@@ -14,14 +14,14 @@
 
     <!--   mi css -->
     <link rel="stylesheet" href="css/prueba.css">
-    <title>contactos</title>
+    <title>SaleEsaBurguer - Contactos</title>
   </head>
   <body>
 <!--    inicia nav -->
-  <nav class="navbar navbar-expand-lg navbar-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark col-lg-12 col-md-6 col-sm-4">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-      	<img src="imagenes/logo-edit.png" alt="" class="animate__animated animate__flip">
+      	<img src="imagenes/logo-edit.png" alt="logo de la marca" class="animate__animated animate__flip">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -32,18 +32,10 @@
             <a class="nav-link" aria-current="page" href="menu.html">Menu</a>
           </li>
           <li class="nav-item animate__animated animate__flip animacionBotonera">
-            <a class="nav-link" href="menuInfantil.html">Menu infantil</a>
+            <a class="nav-link" href="combos.html">Combos</a>
           </li>
-          <li class="nav-item dropdown animate__animated animate__flip animacionBotonera">
-            <a class="nav-link dropdown-toggle" href="contacto.hmtl" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Contacto
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Instagram</a></li>
-              <li><a class="dropdown-item" href="#">Facebook</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Whats App</a></li>
-            </ul>
+          <li class="nav-item animate__animated animate__flip animacionBotonera">
+            <a class="nav-link" href="contacto.html">Contacto</a>
           </li>
           <li class="nav-item animate__animated animate__flip animacionBotonera">
             <a class="nav-link" href="nosotros.html" tabindex="-1" aria-disabled="true">Nosotros</a>
@@ -57,6 +49,7 @@
     </div>
   </nav>
 <!-- cierra nav -->
+  <div class="caja3">
   <section class="bg-secondary">
   	<div class="container-fluid py-4">
   		<h2 class="text-center">Registrate como cliente y obtene descuentos increibles!</h2>
@@ -82,6 +75,12 @@
   		</div>
   	</div>
   </section>
+  </div>
+<!-- google maps -->
+
+<iframe class="caja5" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3281.29103319198!2d-58.756436388289075!3d-34.67260354877372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1631558564608!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+
 <!-- inicia breadCrumb -->
 
   <section class="py-3">
@@ -94,7 +93,7 @@
   		    <li class="breadcrumb-item escalas"><a href="menu.html">Menu</a>
   		    </li>
 
-  		    <li class="breadcrumb-item escalas"><a href="menuInfantil.html">Menu infantil</a>
+  		    <li class="breadcrumb-item escalas"><a href="combos.html">Combos</a>
   		    </li>
 
   		    <li class="breadcrumb-item escalas"><a href="Nosotros.html">Nosotros</a></li>
@@ -111,15 +110,14 @@
   <footer class="caja3">
     <h6>Redes sociales</h6>
       <div>
-        <a href="https://wa.me/NUMERO">
+        <a href="https://wa.me/5491123880941">
           <img id="wpp" src="imagenes/logoWhats.png" alt="logo de whats app para realizar pedidos y/o consultas">
         </a>
       </div>
       <div id="insta">
-        <img src="imagenes/logo-insta.jpg" alt="">
-      </div>
-      <div id="face">
-        <img src="imagenes/logo-insta.jpg" alt="">
+        <a href="https://www.instagram.com/saleesaburger/?hl=es-la">
+        <img src="imagenes/logoInsta2.png" alt="logo de instagram">
+        </a>
       </div>
   </footer>
 <!--   cierra footer -->
