--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <!--   mi css -->
     <link rel="stylesheet" href="css/prueba.css">
 
-    <title>SaleEsaBurguer - Hamburgueseria </title>
+    <title>SaleEsaBurguer - index </title>
   </head>
   <body>
     <!--    inicia nav -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark col-lg-12 col-md-6 col-sm-4">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-          	<img src="imagenes/logo-edit.png" alt="" class="animate__animated animate__flip">
+          	<img src="imagenes/logo-edit.png" alt="logo de la marca" class="animate__animated animate__flip">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
                 <a class="nav-link" aria-current="page" href="menu.html">Menu</a>
               </li>
               <li class="nav-item animate__animated animate__flip animacionBotonera">
-                <a class="nav-link" href="menuInfantil.html">Menu infantil</a>
+                <a class="nav-link" href="combos.html">Combos</a>
               </li>
                <li class="nav-item animate__animated animate__flip animacionBotonera">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -61,13 +61,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="imagenes/heroe-editOptimizada.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/heroe-editOptimizada.jpg" class="d-block w-100" alt="imagen de hamburguesa ilustrativa">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/heroe-editOptimizada.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/carrousel.png" class="d-block w-100" alt="imagen de hamburguesa ilustrativa">
         </div>
         <div class="carousel-item">
-          <img src="imagenes/heroe-editOptimizada.jpg" class="d-block w-100" alt="...">
+          <img src="imagenes/carrousel2.png" class="d-block w-100" alt="imagen de hamburguesa ilustrativa">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,7 +85,7 @@
 
   <div>
     <article>
-      <h1 class="caja4">El impacto de la gente fue inmediato. Fascinados con la experiencia, se lanzaron a recomendar la hamburgueza de boca a boca. Ese enorme fervor y entusiasmo que la propia presión de los clientes transformó, hizo de "sale esa burguer" un centro de culto para los fanáticos de las hamburguesas.</h1>
+      <p class="caja4">El impacto de la gente fue inmediato. Fascinados con la experiencia, se lanzaron a recomendar la hamburgueza de boca a boca. Ese enorme fervor y entusiasmo que la propia presión de los clientes transformó, hizo de "sale esa burguer" un centro de culto para los fanáticos de las hamburguesas.</p>
       </article>
   </div>
 <!-- inicia breadCrumb -->
@@ -97,7 +97,7 @@
   		    <li class="breadcrumb-item escalas"><a href="menu.html">Menu</a>
   		    </li>
 
-  		    <li class="breadcrumb-item escalas"><a href="menuInfantil.html">Menu infantil</a>
+  		    <li class="breadcrumb-item escalas"><a href="combos.html">Combos</a>
   		    </li>
 
   		    <li class="breadcrumb-item escalas"><a href="Contacto.html">Contacto</a>
@@ -119,15 +119,14 @@
   <footer class="caja3">
     <h6>Redes sociales</h6>
       <div>
-        <a href="https://wa.me/NUMERO">
+        <a href="https://wa.me/5491123880941">
           <img id="wpp" src="imagenes/logoWhats.png" alt="logo de whats app para realizar pedidos y/o consultas">
         </a>
       </div>
       <div id="insta">
-        <img src="imagenes/logo-insta.jpg" alt="">
-      </div>
-      <div id="face">
-        <img src="imagenes/logo-insta.jpg" alt="">
+        <a href="https://www.instagram.com/saleesaburger/?hl=es-la">
+        <img src="imagenes/logoInsta2.png" alt="logo de instagram">
+        </a>
       </div>
   </footer>
 
