--- a/nosotros.html
+++ b/nosotros.html
@@ -50,6 +50,34 @@
         </div>
       </nav>
     <!-- cierra nav -->
+      <div>
+        <h4>Sale esa burguer</h4>
+      </div>
+      <div class="caja6">
+        <h3>Un poco sobre nosotros</h3>
+      </div>
+      <div class="caja2">
+        <p>El secreto de nuestras burguers es que trabajamos con carnes de la mas alta calidad,y contamos con las herramientas necesarias en nuestras instalaciones para procesar,picar y preparar las burguers desde cero.</p>
+      </div>
+
+      <div class="caja6">
+        <img src="imagenes/cocina.jpg" alt="">
+      </div> 
+      <div class="caja6">
+          <h2>
+            <p>Nuestra marca comenso durante la pandemia,con el objetivo de llevar a sus casas la comida mas rica y de alta calidad,al mejor precio. 
+            </p>
+          </h2>
+        <div>
+          <h3>Contamos con servio de envios a todo zona oeste y tambien pueden retirarce los pedidos en nuestra sucursal
+          </h3>
+        </div>
+      </div>
+
+        <iframe class="caja5" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3281.29103319198!2d-58.756436388289075!3d-34.67260354877372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1631558564608!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+
+
 
 
     <!-- inicia breadCrumb -->
@@ -77,14 +105,6 @@
         </div>
       </section>
     <!-- cierra bread -->
-
-      <header>
-        <div class="caja2">
-          <h2>Esta seccion no tiene contenido porque la pagina no se va a usar y solamente tenia que completar las 5 secciones,no se me ocurrio nada para poner :c</h2>
-        </div>
-      </header>
-
-
     <!-- inicia footer -->
       <footer class="caja3">
         <h6>Redes sociales</h6>
